[gd_scene load_steps=16 format=2]

[ext_resource path="res://GuiTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/kirifont/KiriFont.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Game.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tutorial.tscn" type="PackedScene" id=5]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/background3.png" type="Texture" id=7]
[ext_resource path="res://assets/blurShader.tres" type="Material" id=8]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="DynamicFont" id=2]
size = 35
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 16
shadow_color = Color( 0, 0, 0, 0.243137 )
shadow_size = 100

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Menu" type="Control"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
game = ExtResource( 4 )
tutorial = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 484.5, 664.5 )
scale = Vector2( 1.03418, 1.3291 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Panel/Sprite"]
material = ExtResource( 8 )
margin_left = -527.0
margin_top = -526.0
margin_right = 538.0
margin_bottom = 514.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.333
anchor_right = 0.666
margin_left = -0.23999
margin_top = 50.0
custom_fonts/font = SubResource( 2 )
text = "Feed the Pig"
align = 1

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.241
anchor_top = 0.159
anchor_right = 0.755
anchor_bottom = 0.325
margin_left = 61.884
margin_top = 42.48
margin_right = -62.38
margin_bottom = 725.0
custom_styles/panel = SubResource( 7 )

[node name="StartButton" type="Button" parent="Panel"]
anchor_left = 0.245
anchor_top = 0.159
anchor_right = 0.755
anchor_bottom = 0.325
margin_left = 0.37999
margin_top = 0.47998
margin_right = -0.380066
margin_bottom = -0.160034
custom_styles/focus = SubResource( 3 )
text = "Start"

[node name="TutorialButton" type="Button" parent="Panel"]
anchor_left = 0.245
anchor_top = 0.359
anchor_right = 0.755
anchor_bottom = 0.525
margin_left = 0.37999
margin_top = -0.359985
margin_right = -0.380066
margin_bottom = 0.279968
rect_pivot_offset = Vector2( 284, 171 )
custom_styles/focus = SubResource( 4 )
text = "How to play"

[node name="SettingsButton" type="Button" parent="Panel"]
anchor_left = 0.245
anchor_top = 0.559
anchor_right = 0.755
anchor_bottom = 0.725
rect_pivot_offset = Vector2( 284, 171 )
custom_styles/focus = SubResource( 5 )
text = "Settings"

[node name="CreditsButton" type="Button" parent="Panel"]
anchor_left = 0.245
anchor_top = 0.759
anchor_right = 0.755
anchor_bottom = 0.925
rect_pivot_offset = Vector2( 284, 171 )
custom_styles/focus = SubResource( 6 )
text = "Credits"

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Panel/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Panel/SettingsButton" to="." method="_on_SettingsButton_pressed"]
